tests/bad_programs/syntax_errors/if_stm_ass_add_opnd.notc
int main() {
    (if (true) 0; else 1;) + 2;
}
